# mal-gtk

./: .gitignore  AUTHORS  INSTALL  Makefile.am  README.md  autogen.sh  configure.ac  glib-tap.mk  meson.build  meson_options.txt  meson_post_install.sh
libmalbb/: meson.build  oauth.cpp  oauth.h  rng.cpp
libmalbb/tests/: meson.build
libmalgtk/: malgtk_anime.c  malgtk_anime.h  malgtk_date.c  malgtk_date.h  malgtk_enumtypes.c.template  malgtk_gtree.c  malgtk_malitem.c  malgtk_malitem.h  malgtk_manga.c  malgtk_manga.h  malgtk_xml.c  malgtk_xml.h  meson.build
libmalgtk/tests/: anime.c  malitem.c  manga.c  meson.build
libmalgtkmm/: malgtkmm_date.cpp  malgtkmm_date.hpp  malgtkmm_malitem.cpp  malgtkmm_malitem.hpp  meson.build
libmalgtkmm/malgtkmm/: init.cc  init.h  meson.build  wrap_init.h
libmalgtkmm/src/: anime.ccg  anime.hg  date.ccg  date.hg  malitem.ccg  malitem.hg  manga.ccg  manga.hg  meson.build
libmalgtkmm/tests/: malitem.cpp  meson.build
m4/: ax_cxx_compile_stdcxx_14.m4
malcli/: main.cpp  meson.build
res/: meson.build  net.talinet.malgtk.cli.desktop.in  net.talinet.malgtk.cli.service.in
src/: Makefile.am  active.hpp  anime.cpp  anime.hpp  anime_list_view.cpp  anime_list_view.hpp  anime_serializer.cpp  anime_serializer.hpp  application.cpp  application.hpp  callback_dispatcher.hpp  date_widgets.cpp  fancy_label.cpp  fancy_label.hpp  increment_entry.cpp  increment_entry.hpp  logging.cpp  logging.hpp  main.cpp  main_window.cpp  main_window.hpp  mal-cli_config.h.in  mal-cli_main.cpp  mal.cpp  mal.hpp  mal_api_unstable.cpp  mal_api_unstable.hpp  mal_curl.cpp  mal_curl.hpp  malgtk_anime.c  malgtk_anime.h  malgtk_date.c  malgtk_date.h  malgtk_deserialize_v1_tools.h  malgtk_enumtypes.h.template  malgtk_gtree.c  malgtk_gtree.h  malgtk_malitem.c  malgtk_malitem.h  malgtk_manga.c  (+31 more)
src/gui/: anime_list_view.cpp  anime_list_view.hpp  cellrendererscore.cpp  cellrendererscore.hpp  date_widgets.cpp  date_widgets.hpp  fancy_label.cpp  increment_entry.cpp  increment_entry.hpp  main_window.cpp  main_window.hpp  malgtk_cellrenderer_score.c  malgtk_cellrenderer_score.h  malitem_list_view.cpp  malitem_list_view.hpp  manga_list_view.cpp  manga_list_view.hpp  password_dialog.cpp  password_dialog.hpp
src/gui/private/: cellrendererscore_p.hpp
subprojects/: boostut.wrap  pcg.wrap
tests/: Makefile.am  anime.c  malitem.c  manga.c
tools/: meson.build
tools/defs_gen/: h2def.py  meson.build
tools/extra_defs_gen/: generate_defs_malgtk.cpp  meson.build
